--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/getlipa"
   },
-  "version": "1.0.0",
+  "version": "1.0.3",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs"
   },
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@headlessui/react": "^2.2.0",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
@@ -24,6 +25,7 @@
     "tslib": "^2.8.0",
     "typescript": "^5.6.3"
   },
+  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts"
