--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "files": [
     "dist"
   ],
+  "style": "dist/before-storybook.css",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b tsconfig.build.json && vite build && npm run build:css",
@@ -28,7 +29,9 @@
     "build-storybook": "concurrently 'npm run build-storybook:css' 'storybook build'",
     "build-storybook:css": "tailwindcss -m -i ./src/tailwind-entry.css -o ./src/index.css",
     "prepublishOnly": "npm run build",
-    "chromatic": "npx chromatic --project-token=chpt_f184d3698b010c1"
+    "chromatic": "npx chromatic --project-token=chpt_f184d3698b010c1",
+    "backstop:reference": "./node_modules/.bin/backstop reference",
+    "backstop:test": "./node_modules/.bin/backstop test"
   },
   "peerDependencies": {
     "react": "^19.0.0",
@@ -48,7 +51,6 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
     "chromatic": "^11.25.2",
     "concurrently": "^9.1.2",
     "eslint": "^9.19.0",
@@ -56,7 +58,6 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
-    "postcss": "^8.5.2",
     "storybook": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
