--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "before-storybook",
+  "name": "lipa-component-library",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,18 +9,19 @@
       "import": "./dist/ui.es.js",
       "require": "./dist/ui.umd.js"
     },
-    "./style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
+    "./styles.css": {
+      "require": "./dist/styles.css",
+      "default": "./dist/styles.css"
     }
   },
+  "main": "./dist/ui.es.js",
+  "module": "./dist/ui.es.js",
   "files": [
     "dist"
   ],
-  "style": "dist/before-storybook.css",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b tsconfig.build.json && vite build && npm run build:css",
+    "build": "tsc -b tsconfig.json && vite build && npm run build:css",
     "build:css": "tailwindcss -m -i ./src/tailwind-entry.css -o ./dist/styles.css",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -34,20 +35,20 @@
     "backstop:test": "./node_modules/.bin/backstop test"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
     "@eslint/js": "^9.19.0",
-    "@storybook/addon-essentials": "^8.5.5",
-    "@storybook/addon-interactions": "^8.5.5",
-    "@storybook/addon-onboarding": "^8.5.5",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-onboarding": "^8.0.9",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/blocks": "^8.5.5",
-    "@storybook/react": "^8.5.5",
-    "@storybook/react-vite": "^8.5.5",
-    "@storybook/test": "^8.5.5",
+    "@storybook/blocks": "^8.0.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/react-vite": "^8.0.9",
+    "@storybook/test": "^8.0.9",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -58,7 +59,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
-    "storybook": "^8.5.5",
+    "storybook": "^8.0.9",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
