ci: Create release

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,8 +55,16 @@ jobs:
         run: | 
           echo "ignore_merge_commits = true" > cog.toml
       - name: Create Version Tag
+        id: release
         uses: cocogitto/cocogitto-action@v3
         with:
           release: true
           git-user: 'Cocogitto bot'
           check-latest-tag-only: true
+      - name: Generate Changelog
+        run: cog changelog --at ${{ steps.release.outputs.version }} -t full_hash > GITHUB_CHANGELOG.md
+      - name: Upload github release
+        uses: softprops/action-gh-release@v1
+        with:
+          body_path: GITHUB_CHANGELOG.md
+          tag_name: ${{ steps.release.outputs.version }}
